fix modal jumping

--- a/app/assets/javascripts/scripts/core/stylesheets/modal.css
+++ b/app/assets/javascripts/scripts/core/stylesheets/modal.css
@@ -1,7 +1,3 @@
-.modal-open .application {
-    overflow: hidden;
-}
-
 body.modal-open {
     transform-origin: initial !important;
     transform: initial !important;
